--- a/about.html
+++ b/about.html
@@ -140,7 +140,7 @@
 
 				<section class="about block">
 					<div class="cont">						
-						<div class="about_title title">О нас</div>
+						<div class="title">О нас</div>
 						<div class="about_description">
 							<div class="about_description-title">История  РАМ ИМ. ГНЕСИНЫХ</div>
 							<div class="about_description-text mb64">
@@ -181,7 +181,7 @@
 
 				<section class="advantages block">
 					<div class="cont">
-						<div class="advantages_title title">Наши преимущества</div>
+						<div class="title">Наши преимущества</div>
 						<div class="advantages_items">
 							<div class="advantages_item">
 								<div class="advantages_item_title">Новаторство</div>
@@ -211,7 +211,7 @@
 					<div class="cont">
 						<div class="artists_top">
 							<div class="artists_left">
-								<div class="artists_title title">Артисты</div>
+								<div class="title">Артисты</div>
 								<a href="#" class="artists_link contact_callback contact_callback-red">Все артисты</a>
 							</div>
 							<div class="slider-arrows2"></div>
