--- a/artists.html
+++ b/artists.html
@@ -141,7 +141,7 @@
 				<section class="artist">
 					<div class="cont">
 						<div class="releases_top">
-							<div class="releases_title title">Артисты</div>	
+							<div class="title">Артисты</div>	
 						</div>				
 
 						<div class="artist_items">
