--- a/card.html
+++ b/card.html
@@ -142,7 +142,7 @@
 				<section class="card block">
 					<div class="cont">
 						<div class="releases_top">
-							<div class="card_title title">Карточка артиста</div>	
+							<div class="title">Карточка артиста</div>	
 						</div>		
 
 						<div class="card_item">
@@ -186,7 +186,7 @@
 						<div class="album_items">
 							<div class="album_item">
 								<div class="album_item-img">
-									<img src="images/album.jpg" alt="">
+									<img data-src="images/album.jpg" alt="" class="lozad">
 								</div>
 								<div class="album_item-name">Название альбома</div>
 								<ol>
@@ -208,63 +208,7 @@
 							</div>
 							<div class="album_item">
 								<div class="album_item-img">
-									<img src="images/album.jpg" alt="">
-								</div>
-								<div class="album_item-name">Название альбома</div>
-								<ol>
-									<li>Трек</li>
-									<li>Трек</li>
-									<li>Трек</li>
-									<li>Трек</li>
-									<li>Трек</li>
-									<li>Трек</li>									
-								</ol>
-							</div>
-							<div class="album_item">
-								<div class="album_item-img">
-									<img src="images/album.jpg" alt="">
-								</div>
-								<div class="album_item-name">Название альбома</div>
-								<ol>
-									<li>Трек</li>
-									<li>Трек</li>
-									<li>Трек</li>
-									<li>Трек</li>
-									<li>Трек</li>
-									<li>Трек</li>
-									<li>Трек</li>
-									<li>Трек</li>
-									<li>Трек</li>
-									<li>Трек</li>
-									<li>Трек</li>
-									<li>Трек</li>
-								</ol>
-							</div>
-							<div class="album_item">
-								<div class="album_item-img">
-									<img src="images/album.jpg" alt="">
-								</div>
-								<div class="album_item-name">Название альбома</div>
-								<ol>
-									<li>Трек</li>
-									<li>Трек</li>
-									<li>Трек</li>
-									<li>Трек</li>
-									<li>Трек</li>
-									<li>Трек</li>
-									<li>Трек</li>
-									<li>Трек</li>
-									<li>Трек</li>
-									<li>Трек</li>
-									<li>Трек</li>
-									<li>Трек</li>
-									<li>Трек</li>
-									<li>Трек</li>
-								</ol>
-							</div>
-							<div class="album_item">
-								<div class="album_item-img">
-									<img src="images/album.jpg" alt="">
+									<img data-src="images/album.jpg" alt="" class="lozad">
 								</div>
 								<div class="album_item-name">Название альбома</div>
 								<ol>
@@ -278,7 +222,63 @@
 							</div>
 							<div class="album_item">
 								<div class="album_item-img">
-									<img src="images/album.jpg" alt="">
+									<img data-src="images/album.jpg" alt="" class="lozad">
+								</div>
+								<div class="album_item-name">Название альбома</div>
+								<ol>
+									<li>Трек</li>
+									<li>Трек</li>
+									<li>Трек</li>
+									<li>Трек</li>
+									<li>Трек</li>
+									<li>Трек</li>
+									<li>Трек</li>
+									<li>Трек</li>
+									<li>Трек</li>
+									<li>Трек</li>
+									<li>Трек</li>
+									<li>Трек</li>
+								</ol>
+							</div>
+							<div class="album_item">
+								<div class="album_item-img">
+									<img data-src="images/album.jpg" alt="" class="lozad">
+								</div>
+								<div class="album_item-name">Название альбома</div>
+								<ol>
+									<li>Трек</li>
+									<li>Трек</li>
+									<li>Трек</li>
+									<li>Трек</li>
+									<li>Трек</li>
+									<li>Трек</li>
+									<li>Трек</li>
+									<li>Трек</li>
+									<li>Трек</li>
+									<li>Трек</li>
+									<li>Трек</li>
+									<li>Трек</li>
+									<li>Трек</li>
+									<li>Трек</li>
+								</ol>
+							</div>
+							<div class="album_item">
+								<div class="album_item-img">
+									<img data-src="images/album.jpg" alt="" class="lozad">
+								</div>
+								<div class="album_item-name">Название альбома</div>
+								<ol>
+									<li>Трек</li>
+									<li>Трек</li>
+									<li>Трек</li>
+									<li>Трек</li>
+									<li>Трек</li>
+									<li>Трек</li>									
+								</ol>
+							</div>
+							<div class="album_item">
+								<div class="album_item-img">
+									<img data-src="images/album.jpg" alt="" class="lozad">
 								</div>
 								<div class="album_item-name">Название альбома</div>
 								<ol>
