--- a/contacts.html
+++ b/contacts.html
@@ -141,7 +141,7 @@
 				<section class="contacts block">
 					<div class="cont">
 						<div class="releases_top">
-							<div class="releases_title title">Контакты</div>	
+							<div class="title">Контакты</div>	
 						</div>							
 						<div class="contacts_box">
 							<div class="contacts_info">
