--- a/music.html
+++ b/music.html
@@ -142,7 +142,7 @@
 				<section class="music">
 					<div class="cont">
 						<div class="releases_top">
-							<div class="releases_title title">Музыка</div>	
+							<div class="title">Музыка</div>	
 						</div>					
 
 						<div class="music_items">
