--- a/news.html
+++ b/news.html
@@ -141,12 +141,12 @@
 				<section class="news">
 					<div class="cont">
 						<div class="releases_top">
-							<div class="releases_title title">Новости</div>	
+							<div class="title">Новости</div>	
 						</div>	
 						
 						<div class="news_top">
 							<a href="#" class="news_item">
-								<div class="news_item-title">Новости</div>
+								<div class="news_item-title">Заголовок</div>
 								<div class="news_item-subtitle">Последние события и интересные факты</div>
 							</a>
 							<a href="#" class="news_item">
@@ -193,7 +193,7 @@
 							<div class="news_right">
 								<a href="#" class="news_item">
 									<div class="news_item-info">
-										<div class="news_item-title">Новости</div>
+										<div class="news_item-title">Заголовок</div>
 										<div class="news_item-subtitle">Последние события и интересные факты</div>
 									</div>
 									<div class="news_item-img">
@@ -201,8 +201,8 @@
 									</div>
 								</a>
 								<a href="#" class="news_item">
-									<span>Читать другие	новости</span>
-									<img data-src="images/arrow.svg" alt="" class="lozad">
+									<div class="news_item-title">Заголовок</div>
+									<div class="news_item-subtitle">Последние события и интересные факты</div>
 								</a>
 							</div>
 						</div>
