--- a/post-one.html
+++ b/post-one.html
@@ -142,7 +142,7 @@
 				<section class="post post-one block">
 					<div class="cont">
 						<div class="releases_top">
-							<div class="releases_title title">Заголовок Новости</div>
+							<div class="title">Заголовок Новости</div>
 							<div class="news_date">00/00/0000</div>
 						</div>	
 						
@@ -170,37 +170,37 @@
 							<div class="news-slider_item">
 								<div class="news-slider_item-title">Заголовок</div>
 								<div class="news-slider_item-img">
-									<img src="images/news1.jpg" alt="">
+									<img data-src="images/news1.jpg" alt="" class="lozad">
 								</div>	
 							</div>
 							<div class="news-slider_item">
 								<div class="news-slider_item-title">Заголовок</div>
 								<div class="news-slider_item-img">
-									<img src="images/news2.jpg" alt="">
+									<img data-src="images/news2.jpg" alt="" class="lozad">
 								</div>	
 							</div>
 							<div class="news-slider_item">
 								<div class="news-slider_item-title">Заголовок</div>
 								<div class="news-slider_item-img">
-									<img src="images/news3.jpg" alt="">
+									<img data-src="images/news3.jpg" alt="" class="lozad">
 								</div>	
 							</div>
 							<div class="news-slider_item">
 								<div class="news-slider_item-title">Заголовок</div>
 								<div class="news-slider_item-img">
-									<img src="images/news4.jpg" alt="">
+									<img data-src="images/news4.jpg" alt="" class="lozad">
 								</div>	
 							</div>
 							<div class="news-slider_item">
 								<div class="news-slider_item-title">Заголовок</div>
 								<div class="news-slider_item-img">
-									<img src="images/news3.jpg" alt="">
+									<img data-src="images/news3.jpg" alt="" class="lozad">
 								</div>	
 							</div>
 							<div class="news-slider_item">
 								<div class="news-slider_item-title">Заголовок</div>
 								<div class="news-slider_item-img">
-									<img src="images/news2.jpg" alt="">
+									<img data-src="images/news2.jpg" alt="" class="lozad">
 								</div>	
 							</div>							
 						</div>
