--- a/post.html
+++ b/post.html
@@ -142,19 +142,14 @@
 				<section class="post block">
 					<div class="cont">
 						<div class="releases_top">
-							<div class="releases_title title">Заголовок Новости</div>
+							<div class="title">Заголовок Новости</div>
 							<div class="news_date">00/00/0000</div>
-							<div class="releases_subtitle">Подзаголовок</div>
-							<div class="news_item-description">Новость текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст </div>
 						</div>	
-						
-						<div class="post_item">
-							<div class="post_item-img">
-								<img data-src="images/post1.jpg" alt="" class="lozad">
-							</div>
-							<div class="post_item-text">
-								<p>Новость текст текст текст</p>
-							</div>
+						<div class="text_block">
+							<h2>Подзаголовок</h2>
+							<p>Новость текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст</p>	
+							<img data-src="images/post1.jpg" alt="" class="lozad">
+							<p>Новость текст текст текст</p>
 						</div>
 					</div>
 				</section>
@@ -172,37 +167,37 @@
 							<div class="news-slider_item">
 								<div class="news-slider_item-title">Заголовок</div>
 								<div class="news-slider_item-img">
-									<img src="images/news1.jpg" alt="">
+									<img data-src="images/news1.jpg" alt="" class="lozad">
 								</div>	
 							</div>
 							<div class="news-slider_item">
 								<div class="news-slider_item-title">Заголовок</div>
 								<div class="news-slider_item-img">
-									<img src="images/news2.jpg" alt="">
+									<img data-src="images/news2.jpg" alt="" class="lozad">
 								</div>	
 							</div>
 							<div class="news-slider_item">
 								<div class="news-slider_item-title">Заголовок</div>
 								<div class="news-slider_item-img">
-									<img src="images/news3.jpg" alt="">
+									<img data-src="images/news3.jpg" alt="" class="lozad">
 								</div>	
 							</div>
 							<div class="news-slider_item">
 								<div class="news-slider_item-title">Заголовок</div>
 								<div class="news-slider_item-img">
-									<img src="images/news4.jpg" alt="">
+									<img data-src="images/news4.jpg" alt="" class="lozad">
 								</div>	
 							</div>
 							<div class="news-slider_item">
 								<div class="news-slider_item-title">Заголовок</div>
 								<div class="news-slider_item-img">
-									<img src="images/news3.jpg" alt="">
+									<img data-src="images/news3.jpg" alt="" class="lozad">
 								</div>	
 							</div>
 							<div class="news-slider_item">
 								<div class="news-slider_item-title">Заголовок</div>
 								<div class="news-slider_item-img">
-									<img src="images/news2.jpg" alt="">
+									<img data-src="images/news2.jpg" alt="" class="lozad">
 								</div>	
 							</div>							
 						</div>
