--- a/releases.html
+++ b/releases.html
@@ -141,7 +141,7 @@
 				<section class="releases">
 					<div class="cont">
 						<div class="releases_top">
-							<div class="releases_title title">Релизы</div>	
+							<div class="title">Релизы</div>	
 						</div>
 						<div class="releases_bottom">							
 							<div class="releases_left">
@@ -152,62 +152,62 @@
 						</div>	
 
 						<div class="releases_items">
-							<div class="releases_item">
+							<a href="#" class="releases_item">
 								<div class="releases_item-img">
 									<img data-src="images/releases1.jpg" alt="" class="lozad">
 								</div>
 								<div class="releases_item-title">Имя артиста</div>
 								<div class="releases_item-text">Название трека</div>
-							</div>
-							<div class="releases_item">
+							</a>
+							<a href="#" class="releases_item">
 								<div class="releases_item-img">
 									<img data-src="images/releases2.jpg" alt="" class="lozad">
 								</div>
 								<div class="releases_item-title">Имя артиста</div>
 								<div class="releases_item-text">Название трека</div>
-							</div>
-							<div class="releases_item">
+							</a>
+							<a href="#" class="releases_item">
 								<div class="releases_item-img">
 									<img data-src="images/releases3.jpg" alt="" class="lozad">
 								</div>
 								<div class="releases_item-title">Имя артиста</div>
 								<div class="releases_item-text">Название трека</div>
-							</div>
-							<div class="releases_item">
+							</a>
+							<a href="#" class="releases_item">
 								<div class="releases_item-img">
 									<img data-src="images/releases4.jpg" alt="" class="lozad">
 								</div>
 								<div class="releases_item-title">Имя артиста</div>
 								<div class="releases_item-text">Название трека</div>
-							</div>	
-							<div class="releases_item">
+							</a>	
+							<a href="#" class="releases_item">
 								<div class="releases_item-img">
 									<img data-src="images/releases1.jpg" alt="" class="lozad">
 								</div>
 								<div class="releases_item-title">Имя артиста</div>
 								<div class="releases_item-text">Название трека</div>
-							</div>
-							<div class="releases_item">
+							</a>
+							<a href="#" class="releases_item">
 								<div class="releases_item-img">
 									<img data-src="images/releases2.jpg" alt="" class="lozad">
 								</div>
 								<div class="releases_item-title">Имя артиста</div>
 								<div class="releases_item-text">Название трека</div>
-							</div>
-							<div class="releases_item">
+							</a>
+							<a href="#" class="releases_item">
 								<div class="releases_item-img">
 									<img data-src="images/releases3.jpg" alt="" class="lozad">
 								</div>
 								<div class="releases_item-title">Имя артиста</div>
 								<div class="releases_item-text">Название трека</div>
-							</div>
-							<div class="releases_item">
+							</a>
+							<a href="#" class="releases_item">
 								<div class="releases_item-img">
 									<img data-src="images/releases4.jpg" alt="" class="lozad">
 								</div>
 								<div class="releases_item-title">Имя артиста</div>
 								<div class="releases_item-text">Название трека</div>
-							</div>	
+							</a>	
 						</div>
 						<a href="#" class="releases_link releases_link-mob contact_callback">Вся музыка</a>
 						
@@ -222,48 +222,48 @@
 							</div>	
 	
 							<div class="video_items">
-								<div class="releases_item">
+								<a href="#" class="releases_item">
 									<div class="releases_item-img">
 										<img data-src="images/video1.jpg" alt="" class="lozad">
 									</div>
 									<div class="releases_item-title">Имя артиста</div>
 									<div class="releases_item-text">Название трека</div>
-								</div>
-								<div class="releases_item">
+								</a>
+								<a href="#" class="releases_item">
 									<div class="releases_item-img">
 										<img data-src="images/video2.jpg" alt="" class="lozad">
 									</div>
 									<div class="releases_item-title">Имя артиста</div>
 									<div class="releases_item-text">Название трека</div>
-								</div>
-								<div class="releases_item">
+								</a>
+								<a href="#" class="releases_item">
 									<div class="releases_item-img">
 										<img data-src="images/video3.jpg" alt="" class="lozad">
 									</div>
 									<div class="releases_item-title">Имя артиста</div>
 									<div class="releases_item-text">Название трека</div>
-								</div>
-								<div class="releases_item">
+								</a>
+								<a href="#" class="releases_item">
 									<div class="releases_item-img">
 										<img data-src="images/video1.jpg" alt="" class="lozad">
 									</div>
 									<div class="releases_item-title">Имя артиста</div>
 									<div class="releases_item-text">Название трека</div>
-								</div>
-								<div class="releases_item">
+								</a>
+								<a href="#" class="releases_item">
 									<div class="releases_item-img">
 										<img data-src="images/video2.jpg" alt="" class="lozad">
 									</div>
 									<div class="releases_item-title">Имя артиста</div>
 									<div class="releases_item-text">Название трека</div>
-								</div>
-								<div class="releases_item">
+								</a>
+								<a href="#" class="releases_item">
 									<div class="releases_item-img">
 										<img data-src="images/video3.jpg" alt="" class="lozad">
 									</div>
 									<div class="releases_item-title">Имя артиста</div>
 									<div class="releases_item-text">Название трека</div>
-								</div>							
+								</a>							
 							</div>
 							<a href="#" class="releases_link releases_link-mob contact_callback contact_callback-red">Все видео</a>
 						</section>
