--- a/videos.html
+++ b/videos.html
@@ -142,7 +142,7 @@
 				<section class="videos">
 					<div class="cont">
 						<div class="releases_top">
-							<div class="releases_title title">Видео</div>	
+							<div class="title">Видео</div>	
 						</div>					
 
 						<div class="videos_items">
