--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 					<div class="cont">
 						<div class="releases_top">
 							<div class="releases_left">
-								<div class="releases_title title">Релизы</div>
+								<div class="title">Релизы</div>
 								<a href="#" class="releases_link contact_callback">Все релизы</a>
 							</div>
 							<div class="slider-arrows"></div>
@@ -220,7 +220,7 @@
 					<div class="cont">
 						<div class="artists_top">
 							<div class="artists_left">
-								<div class="artists_title title">Артисты</div>
+								<div class="title">Артисты</div>
 								<a href="#" class="artists_link contact_callback contact_callback-red">Все артисты</a>
 							</div>
 							<div class="slider-arrows2"></div>
@@ -320,7 +320,7 @@
 
 				<section class="advantages">
 					<div class="cont">
-						<div class="advantages_title title">Наши преимущества</div>
+						<div class="title">Наши преимущества</div>
 						<div class="advantages_items">
 							<div class="advantages_item">
 								<div class="advantages_item_title">Новаторство</div>
@@ -362,7 +362,7 @@
 				<section class="news">
 					<div class="cont">
 						<div class="news_head">							
-							<div class="news_title title">Новости</div>
+							<div class="title">Новости</div>
 							<a href="#" class="news_link contact_callback">Все новости</a>						
 						</div>
 						<div class="news_top">
