--- a/service.html
+++ b/service.html
@@ -141,7 +141,7 @@
 				<section class="service">
 					<div class="cont">
 						<div class="releases_top">
-							<div class="service_title title">Услуги</div>	
+							<div class="title">Услуги</div>	
 						</div>	
 						<div class="service_items">
 							<div class="service_item">
