--- a/index.html
+++ b/index.html
@@ -320,7 +320,9 @@
 
 				<section class="advantages">
 					<div class="cont">
-						<div class="title">Наши преимущества</div>
+						<div class="releases_top">
+							<div class="title">Наши преимущества</div>
+						</div>						
 						<div class="advantages_items">
 							<div class="advantages_item">
 								<div class="advantages_item_title">Новаторство</div>
