--- a/about.html
+++ b/about.html
@@ -139,37 +139,26 @@
 				
 
 				<section class="about block">
-					<div class="cont">						
-						<div class="title">О нас</div>
+					<div class="cont">		
+						<div class="releases_top">
+							<div class="title">О нас</div>
+						</div>					
 						<div class="about_description">
-							<div class="about_description-title">История  РАМ ИМ. ГНЕСИНЫХ</div>
-							<div class="about_description-text mb64">
-								<p>Гнесинка – одно из самых знаменитых музыкальных учебных заведений России.</p>
-								<p>Академия носит имя сестёр Гнесиных: Елены, Евгении, Марии, Елизаветы и Ольги. Именно Елена Фабиановна вместе со своими сёстрами основала в феврале 1895 года музыкальное училище, ставшее в дальнейшем Российской академией музыки имени Гнесиных.</p>
-							</div>
-							<div class="about_description-box">
-								<div class="about_description-text">
-									<p class="mb0">Елена Фабиановна была директором, художественным руководителем, профессором училища.</p>
-									<p>Елена Гнесина посвятила всю жизнь музыкальной педагогике и всю жизнь прожила в том же доме, где размещалось ее детище, и атмосфера гостеприимного дома неизменно привлекала и учеников, и коллег. До сих пор в Гнесинке сохранилась часть дома сестер «Музей-квартира Е.Ф. Гнесиной», который можно посетить и проникнуться жизнью того времени. А перед входом в концертный зал академии в 2004 году был открыт памятник Елене Фабиановне, играющей на рояле, вместо крышки которого изображены крылья птиц.</p>
-									<p class="mb0">Особенностью Училища всегда являлся тот факт, что независимо от знаний и возраста, любой человек мог стать студентом.</p>
-									<p class="mb0">Принципы обучения, существовавшие в тот период в консерватории, легли в основу работы училища и соблюдаются по сей день.</p>
-									<p>Популярность училища быстро росла. И с тех пор Российская академия музыки имени Гнесиных по праву считается крупнейшим музыкальным институтом в Европе. Академия является единственным вузом, в котором представлены все специальности и специализации различных музыкальных направлений, изучаемых в России.</p>
-								</div>
-								<div class="about_img">
-									<img src="images/about1.jpg" alt="">
-								</div>								
-							</div>
-							<div class="about_description-title">ИДЕЯ СОЗДАНИЯ ЛЕЙБЛА</div>
-							<div class="about_description-box second">		
-								<div class="about_img">
-									<img src="images/about2.jpg" alt="">
-								</div>		
-								<div class="about_description-text">
-									<p>Идея создания музыкального лейбла «Дом Гнесиных» пришла к представителям Российской Академии музыки Гнесиных в августе 2021 года в рамках подготовки к участию в программе академического стратегического развития «Приоритет-2030». Отправной точкой стало желание гнесинцев создать музыкальное объединение, которое станет поддержкой творчества талантов учеников и преподавателей академии, а также распространит их богатое музыкальное наследие. </p>
-									<p>Инициатором создания музыкального лейбла Российской Академии музыки Гнесиных стала кафедра менеджмента музыкального искусства в лице заведующей кафедрой - Родионовой Дарьи и ее помощника Шулекиной Ксении. </p>
-								</div>
-							</div>
-						</div>
+							<h2>История  РАМ ИМ. ГНЕСИНЫХ</h2>	
+							<img src="images/about1.jpg" alt="">													
+							<p>Гнесинка – одно из самых знаменитых музыкальных учебных заведений России.</p>
+							<p>Академия носит имя сестёр Гнесиных: Елены, Евгении, Марии, Елизаветы и Ольги. Именно Елена Фабиановна вместе со своими сёстрами основала в феврале 1895 года музыкальное училище, ставшее в дальнейшем Российской академией музыки имени Гнесиных.</p>
+							<p>Елена Фабиановна была директором, художественным руководителем, профессором училища.</p>
+							<p>Елена Гнесина посвятила всю жизнь музыкальной педагогике и всю жизнь прожила в том же доме, где размещалось ее детище, и атмосфера гостеприимного дома неизменно привлекала и учеников, и коллег. До сих пор в Гнесинке сохранилась часть дома сестер «Музей-квартира Е.Ф. Гнесиной», который можно посетить и проникнуться жизнью того времени. А перед входом в концертный зал академии в 2004 году был открыт памятник Елене Фабиановне, играющей на рояле, вместо крышки которого изображены крылья птиц.</p>
+							<p>Особенностью Училища всегда являлся тот факт, что независимо от знаний и возраста, любой человек мог стать студентом.</p>
+							<p>Принципы обучения, существовавшие в тот период в консерватории, легли в основу работы училища и соблюдаются по сей день.</p>
+							<p>Популярность училища быстро росла. И с тех пор Российская академия музыки имени Гнесиных по праву считается крупнейшим музыкальным институтом в Европе. Академия является единственным вузом, в котором представлены все специальности и специализации различных музыкальных направлений, изучаемых в России.</p>
+							<h2>ИДЕЯ СОЗДАНИЯ ЛЕЙБЛА</h2>	
+							<img src="images/about2.jpg" alt="">						
+							<p>Идея создания музыкального лейбла «Дом Гнесиных» пришла к представителям Российской Академии музыки Гнесиных в августе 2021 года в рамках подготовки к участию в программе академического стратегического развития «Приоритет-2030». Отправной точкой стало желание гнесинцев создать музыкальное объединение, которое станет поддержкой творчества талантов учеников и преподавателей академии, а также распространит их богатое музыкальное наследие. </p>
+							<p>Инициатором создания музыкального лейбла Российской Академии музыки Гнесиных стала кафедра менеджмента музыкального искусства в лице заведующей кафедрой - Родионовой Дарьи и ее помощника Шулекиной Ксении. </p>
+							
+						</div>					
 					</div>
 				</section>
 
@@ -181,7 +170,9 @@
 
 				<section class="advantages block">
 					<div class="cont">
-						<div class="title">Наши преимущества</div>
+						<div class="releases_top">
+							<div class="title">Наши преимущества</div>
+						</div>						
 						<div class="advantages_items">
 							<div class="advantages_item">
 								<div class="advantages_item_title">Новаторство</div>
