--- a/post-one.html
+++ b/post-one.html
@@ -141,18 +141,11 @@
 
 				<section class="post post-one block">
 					<div class="cont">
-						<div class="releases_top">
-							<div class="title">Заголовок Новости</div>
+						<div class="text_block">
+							<h1>Заголовок Новости</h1>
 							<div class="news_date">00/00/0000</div>
-						</div>	
-						
-						<div class="post_item">
-							<div class="post_item-img">
-								<img data-src="images/post2.jpg" alt="" class="lozad">
-							</div>
-							<div class="post_item-text">
-								<p>Новость текст текст текст</p>
-							</div>
+							<img data-src="images/post2.jpg" alt="" class="lozad">
+							<p>Новость текст текст текстНовость текст текст текст Новость текст текст текстvНовость текст текст текстть текст текст текстНовость текст текст текст Новость текст текст текстvНовость текст текст текстть текст текст текстНовость текст текст текст Новость текст текст текстvНовость текст текст текстть текст текст текстНовость текст текст текст Новость текст текст текстvНовость текст текст текстть текст текст текстНовость текст текст текст Новость текст текст текстvНовость текст текст текстть текст текст текстНовость текст текст текст Новость текст текст текстvНовость текст текст текстть текст текст текстНовость текст текст текст Новость текст текст текстvНовость текст текст текстть текст текст текстНовость текст текст текст Новость текст текст текстvНовость текст текст текстть текст текст текстНовость текст текст текст Новость текст текст текстvНовость текст текст текстть текст текст текстНовость текст текст текст Новость текст текст текстvНовость текст текст текстть текст текст текстНовость текст текст текст Новость текст текст текстvНовость текст текст текстть текст текст текстНовость текст текст текст Новость текст текст текстvНовость текст текст текстть текст текст текстНовость текст текст текст Новость текст текст текстvНовость текст текст текстть текст текст текстНовость текст текст текст Новость текст текст текстvНовость текст текст текстть текст текст текстНовость текст текст текст Новость текст текст текстvНовость текст текст текстть текст текст текстНовость текст текст текст Новость текст текст текстvНовость текст текст текстть текст текст текстНовость текст текст текст Новость текст текст текстvНовость текст текст текстть текст текст текстНовость текст текст текст Новость текст текст текстvНовость текст текст текстть текст текст текстНовость текст текст текст Новость текст текст текстvНовость текст текст текстть текст текст текстНовость текст текст текст Новость текст текст текстvНовость текст текст текстть текст текст текстНовость текст текст текст Новость текст текст текстvНовость текст текст текст</p>
 						</div>
 					</div>
 				</section>
