--- a/about.html
+++ b/about.html
@@ -145,19 +145,18 @@
 						</div>					
 						<div class="about_description">
 							<h2>История  РАМ ИМ. ГНЕСИНЫХ</h2>	
-							<img src="images/about1.jpg" alt="">													
 							<p>Гнесинка – одно из самых знаменитых музыкальных учебных заведений России.</p>
 							<p>Академия носит имя сестёр Гнесиных: Елены, Евгении, Марии, Елизаветы и Ольги. Именно Елена Фабиановна вместе со своими сёстрами основала в феврале 1895 года музыкальное училище, ставшее в дальнейшем Российской академией музыки имени Гнесиных.</p>
+							<img src="images/about1.jpg" alt="" class="right">
 							<p>Елена Фабиановна была директором, художественным руководителем, профессором училища.</p>
 							<p>Елена Гнесина посвятила всю жизнь музыкальной педагогике и всю жизнь прожила в том же доме, где размещалось ее детище, и атмосфера гостеприимного дома неизменно привлекала и учеников, и коллег. До сих пор в Гнесинке сохранилась часть дома сестер «Музей-квартира Е.Ф. Гнесиной», который можно посетить и проникнуться жизнью того времени. А перед входом в концертный зал академии в 2004 году был открыт памятник Елене Фабиановне, играющей на рояле, вместо крышки которого изображены крылья птиц.</p>
 							<p>Особенностью Училища всегда являлся тот факт, что независимо от знаний и возраста, любой человек мог стать студентом.</p>
 							<p>Принципы обучения, существовавшие в тот период в консерватории, легли в основу работы училища и соблюдаются по сей день.</p>
 							<p>Популярность училища быстро росла. И с тех пор Российская академия музыки имени Гнесиных по праву считается крупнейшим музыкальным институтом в Европе. Академия является единственным вузом, в котором представлены все специальности и специализации различных музыкальных направлений, изучаемых в России.</p>
 							<h2>ИДЕЯ СОЗДАНИЯ ЛЕЙБЛА</h2>	
-							<img src="images/about2.jpg" alt="">						
+							<img src="images/about2.jpg" alt="" class="left">						
 							<p>Идея создания музыкального лейбла «Дом Гнесиных» пришла к представителям Российской Академии музыки Гнесиных в августе 2021 года в рамках подготовки к участию в программе академического стратегического развития «Приоритет-2030». Отправной точкой стало желание гнесинцев создать музыкальное объединение, которое станет поддержкой творчества талантов учеников и преподавателей академии, а также распространит их богатое музыкальное наследие. </p>
 							<p>Инициатором создания музыкального лейбла Российской Академии музыки Гнесиных стала кафедра менеджмента музыкального искусства в лице заведующей кафедрой - Родионовой Дарьи и ее помощника Шулекиной Ксении. </p>
-							
 						</div>					
 					</div>
 				</section>
